force-app/main/default/objects/TF_Time_Tracker__c/TF_Time_Tracker__c.object-meta.xml
<CustomObject>
    <description>Has time worked for each stage, even if broken into multiple increments</description>
    <label>TF Time Tracker</label>
    <nameField>
        <displayFormat>TFTT-{000000000}</displayFormat>
        <label>TF Time Tracker Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TF Time Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>