force-app/main/default/objects/TF_Time_Tracker__c/fields/Form_Status__c.field-meta.xml
<CustomField>
    <fullName>Form_Status__c</fullName>
    <label>Form Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Collaborate</fullName>
            </value>
            <value>
                <fullName>Revise Form</fullName>
                <label>Design/Revise Form</label>
            </value>
            <value>
                <fullName>Quality Check</fullName>
            </value>
            <value>
                <fullName>Update Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>