force-app/main/default/objects/TF_Time_Tracker__c/fields/Total_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Minutes__c</fullName>
    <formula>(End_Time__c -  Start_Time__c)*1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>