force-app/main/default/objects/TF_Time_Tracker__c/fields/Traverse_Form__c.field-meta.xml
<CustomField>
    <fullName>Traverse_Form__c</fullName>
    <label>Traverse Form</label>
    <referenceTo>Traverse_Form__c</referenceTo>
    <relationshipLabel>Time Stamps</relationshipLabel>
    <relationshipName>TF_Time_Trackers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>